# blender-rag

./: .env.example  .gitignore  README.md  Taskfile.yaml  app.py  load_wiki_data.py  main.py  models.py  prompts.toml  pyproject.toml  rag_app.py  utils.py
.streamlit/: config.toml
available_pages/: retrieval.py
lib/: pyproject.toml
lib/src/lib/: logger.py
lib/src/lib/models/: api.py  chat.py  models.py
middleware/: Taskfile.yaml  pyproject.toml
middleware/src/middleware/: app.py  rag_app.py  rag_pipeline.py
pages/: chat.py  prompt.py
routes/: chat.py  prompt.py  retrieval.py  settings.py
ui/: Taskfile.yaml  pyproject.toml
ui/src/ui/: __init__.py  app.py  load_wiki_data.py  main.py  rag_app.py
ui/src/ui/api/: api.py
ui/src/ui/routes/: chat.py  prompt.py  retrieval.py  settings.py
