[project]
name = "ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "profanta", email = "me@profanta" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ui = "ui:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
